z-index fixed

--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -26940,7 +26940,7 @@ select.country_select {
         top: 80px;
         left: -390px;
         height: 100%;
-        z-index: 9999;
+        z-index: 1;
         border-radius: 0px;
         background-color: #fff;
         width: 390px;
